   Windows, Mac OS 10.6 - 10.8, cross building on Linux for Windows.

 - Added solution files for Visual Studio 10 Express, Xcode 4.2, 4.6

 - Single exe can now work with many versions (localizations) of the game.
   There is no need anymore to compile binary for every version of the game.

 - There is no need anymore to lower-case game resources on Linux.


JA2-Stracciatella
-----------------

(r7072) Fix a vanilla glitch: When scrolling back in an email, the email delete window was not redrawn properly.
(r7071) Fix a glitch in r4977: The yes/no buttons in the email delete window could not be clicked, when the email had more than one page.
(r7070) Fix a vanilla bug: Darren used the wrong quote for the first fight on a day, if there were fights on previous days.
(r7069) Fix a vanilla bug: The sum of fractions for troops and elites was more than 100% for one army composition.
(r7066) Fix a bug in r3615, which caused an assertion failure/null-pointer access when removing a dead merc via the contract menu.
(r7062) Fix a vanilla bug: When a player group arrives in a sector, in some cases it was checked on the wrong (out of bounds) side, whether enemies noticed them.
(r7056) Fix a vanilla bug, which prevented enemies from climbing roofs.
(r7055) Fix a vanilla bug: When a soldier changed team (e.g. getting hostile), he lost his camouflage.
(r6933) Plug a vanilla one-time memory leak.
(r6926) Fix a vanilla bug: Due to a logic bug multiple terrorists could end up in the same sector.
(r6924) Fix a vanilla glitch in the editor: Pressing page up/down while an item is selected and the options menu is active caused some widgets of the items menu to be shown.
(r6864) Fix a vanilla glitch: Too few items could be drawn, if some items on the ground were not visible.
(r6777) Fix a vanilla glitch: When the SAM control in Meduna was rebuilt, a graphic with wrong orientation was used.
(r6758) Fix a vanilla out of bounds array access, when starting the creature quest.